fix: overflow in sidebar

--- a/exadel-trainee-app/src/app/components/sidebar/sidebar.component.scss
+++ b/exadel-trainee-app/src/app/components/sidebar/sidebar.component.scss
@@ -1,7 +1,8 @@
-@import "src/theme/variables";
+@import 'src/theme/variables';
 
 .sidebar {
   height: 100%;
+  overflow-y: hidden;
   color: $black;
   background-color: $others-grey6;
 
@@ -14,9 +15,9 @@
     width: 100px;
     height: 100px;
     margin: 10% 25%;
-    background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
-    border-radius: 50%
+    border-radius: 50%;
   }
 
   &__nav {
@@ -30,7 +31,6 @@
     margin: 1em auto;
   }
 
-
   &__button {
     position: absolute;
     bottom: 50%;
@@ -43,4 +43,3 @@
     }
   }
 }
-
